test/expected/explain_o_less_rck_b++default.out
explain bool operator<(S const&) = default
           ^
12: error: default member operator "<" must also be "const"
